fix: native image