@@ -75,6 +75,23 @@
                                     <goal>compile-no-fork</goal>
                                 </goals>
                                 <phase>package</phase>
+                                <configuration>
+                                    <buildArgs>
+                                        <!-- ignore the 'use G1 GC for improved latency and throughput' recommendation -->
+                                        <buildArg>--gc=serial</buildArg>
+                                        <!-- keep in sync with MemorySizeValidator.java -->
+                                        <buildArg>-R:MinHeapSize=288m</buildArg>
+                                        <buildArg>-R:MaxHeapSize=288m</buildArg>
+                                        <buildArg>-R:MaxDirectMemorySize=512m</buildArg>
+                                        <!-- prepare for future releases -->
+                                        <buildArg>--future-defaults=all</buildArg>
+                                        <!-- enable more CPU features for improved performance. -->
+                                        <buildArg>-march=x86-64-v3</buildArg>
+                                    </buildArgs>
+                                    <jvmArgs>
+                                        <jvmArg>--enable-native-access=ALL-UNNAMED</jvmArg>
+                                    </jvmArgs>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
